<resources>
    <string name="app_name">clicker</string>
    <string name="mine_center">个人中心</string>
    <string name="mine_miaoshu">描述：</string>
    <string name="zan">赞</string>
    <string name="huozan">获赞</string>
    <string name="dongtai">动态</string>
    <string name="guanzhu">关注</string>
    <string name="retui">热推</string>
    <string name="beiguanzhu">被关注</string>
    <string name="zuixin">最新</string>

    <string name="personinstall">账号设置</string>
    <string name="zhanghu">账户</string>
    <string name="changepass">更改密码</string>
    <string name="heimingd">黑名单</string>
    <string name="install">设置</string>
    <string name="langueage">语言</string>
    <string name="tuisongins">推送通知设置</string>
    <string name="needoldpic">保存原始图片</string>
    <string name="zhichi">支持</string>
    <string name="helpcenter">帮助中心</string>
    <string name="userxieyi">用户使用协议</string>
    <string name="upqustion">报告问题</string>
    <string name="cleanhistorysou">清除搜索历史记录</string>
    <string name="cleanhistoryliao">清除聊天记录</string>
    <string name="backall">退出</string>

    <string name="phoneregister">手机注册</string>
    <string name="register">注册</string>
    <string name="needcode">获取验证码</string>
    <string name="phone">手机</string>
    <string name="password">密码设定</string>
    <string name="repassword">确认密码</string>
    <string name="inputcode">输入验证码</string>
    <string name="over">完成</string>

    <string name="del">删除</string>
    <string name="huanyuan">还原</string>

    <string name="cansendtongzhi">允许发送通知</string>
    <string name="xieyi">用户使用协议</string>

    <string name="minephoto">我的照片</string>
    <string name="upphoto">上传照片</string>
    <string name="addphotomessage">添加照片描述</string>
    <string name="update">上传</string>

    <string name="chinaj">简体中文</string>
    <string name="chinaf">繁体中文</string>
    <string name="englist">英文（English）</string>

    <string name="tuisong">允许发送通知</string>

    <string name="registermessage">注册信息</string>
    <string name="touins">设置头像</string>
    <string name="nickname">昵称</string>
    <string name="miaoshu">描述...</string>
    <string name="me">我</string>
    <string name="per">好友</string>

    <string name="loginphone">手机登陆</string>
    <string name="loginweixin">微信登陆</string>
    <string name="loginweibo">微博登陆</string>
    <string name="logo">天怡互动科技有限公司</string>

    <string name="bianji">编辑个人</string>
    <string name="genghuantouxiang">更换头像</string>
    <string name="gerenmiaoshu">个人描述</string>
    <string name="yinsixinxi">隐私信息</string>
    <string name="weizhiding">未指定</string>
    
    <string name="forgetpass">忘记密码</string>
    <string name="code_code">验证码验证</string>
    <string name="phonenumber">手机号码</string>
    <string name="newpass">新密码</string>
    <string name="renewpass">确认新密码</string>
    <string name="repass">重设密码</string>

    <string name="phonelogin">手机登录</string>
    <string name="inputpass">输入密码</string>
    <string name="login">登陆</string>


    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="quxiao">取消</string>
    <string name="huifu">回复</string>

    <string name="remen">热门搜索</string>
    <string name="zuijin">最近搜索</string>
    <string name="youxiang">邮箱</string>
    <string name="xing">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>

    <string name="usercen">用户中心</string>
    <string name="huifuone">回复：</string>
    <string name="popu_album">相册</string>
    <string name="popu_camear">相机</string>
    <string name="pinglun">评论</string>

    <string name="pingsucc">评论成功</string>
    <string name="huisucc">回复成功</string>


</resources>
