<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/title1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/left"
        android:text="@string/code_code"
        android:textColor="@color/black"
        android:textSize="14sp"
        />
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="37dp">
        <TextView
            android:id="@+id/forgetpass_code_tv"
            android:layout_width="86dp"
            android:background="@drawable/blue_roud_back"
            android:text="@string/needcode"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/forgetpass_phone_ed"
            android:layout_marginRight="2dp"
            android:background="@drawable/gray_rond_back"
            android:layout_toLeftOf="@id/forgetpass_code_tv"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:hint="@string/phonenumber"
            android:paddingLeft="5dp"
            android:inputType="number"
            android:textColorHint="#d1d1d1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <EditText
        android:id="@+id/forgetpass_code_ed"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:hint="@string/inputcode"
        android:paddingLeft="5dp"
        android:textColorHint="#d1d1d1"
        android:inputType="number"
        android:background="@drawable/gray_rond_back"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="30dp"
        android:background="@color/e6"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:text="@string/repass"
        android:textColor="@color/black"
        android:textSize="14sp"
        />
    <EditText
        android:id="@+id/forgetpass_pass_ed"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:hint="@string/newpass"
        android:paddingLeft="5dp"
        android:textColorHint="#d1d1d1"
        android:inputType="textPassword"
        android:background="@drawable/gray_rond_back"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <EditText
        android:id="@+id/forgetpass_repass_ed"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:hint="@string/renewpass"
        android:paddingLeft="5dp"
        android:inputType="textPassword"
        android:textColorHint="#d1d1d1"
        android:background="@drawable/gray_rond_back"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/forgetpass_over_tv"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_margin="30dp"
            android:layout_alignParentBottom="true"
            android:text="@string/over"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@drawable/blue_roud_back"
            />

    </RelativeLayout>
</LinearLayout>