<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/title1"/>
    <RelativeLayout
        android:layout_marginTop="18dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="37dp">
        <TextView
            android:id="@+id/register_code_tv"
            android:layout_width="86dp"
            android:background="@drawable/blue_roud_back"
            android:text="获取验证码"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/register_phone_ed"
            android:layout_marginRight="2dp"
            android:background="@drawable/gray_rond_back"
            android:layout_toLeftOf="@id/register_code_tv"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:inputType="number"
            android:hint="@string/phone"
            android:paddingLeft="5dp"
            android:textColorHint="#d1d1d1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <EditText
        android:id="@+id/register_pass_ed"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:hint="@string/password"
        android:paddingLeft="5dp"
        android:inputType="textPassword"
        android:textColorHint="#d1d1d1"
        android:background="@drawable/gray_rond_back"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
    <EditText
        android:id="@+id/register_repassword_ed"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:hint="@string/repassword"
        android:paddingLeft="5dp"
        android:inputType="textPassword"
        android:textColorHint="#d1d1d1"
        android:background="@drawable/gray_rond_back"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
    <EditText
        android:id="@+id/register_code_ed"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:inputType="number"
        android:hint="@string/inputcode"
        android:paddingLeft="5dp"
        android:textColorHint="#d1d1d1"
        android:background="@drawable/gray_rond_back"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/register_over_tv"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="30dp"
            android:text="@string/over"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@drawable/blue_roud_back"
            />
    </RelativeLayout>
</LinearLayout>