<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/login_show_iv"
        android:visibility="invisible"
        android:src="@mipmap/login_show"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <LinearLayout
        android:id="@+id/login_show_ll"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="37dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/left"
                android:src="@mipmap/login_phone"
                />
            <TextView
                android:id="@+id/login_phone_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/gray_rond_back"
                android:text="@string/loginphone"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/black"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="37dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/left"
                android:src="@mipmap/login_weixin"
                />
            <TextView
                android:id="@+id/login_weixin_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/gray_rond_back"
                android:text="@string/loginweixin"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/black"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="37dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/left"
                android:src="@mipmap/login_weibo"
                />
            <TextView
                android:id="@+id/login_weibo_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/gray_rond_back"
                android:text="@string/loginweibo"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/black"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:background="@color/e6"
                android:text="@string/logo"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="9sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textView" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>